--- a/index.css
+++ b/index.css
@@ -2,6 +2,15 @@
     color: #97c93e !important;
 }
 
+.btn-platzi{
+    background-color: #97c93e;
+    color: white !important;
+}
+
+.btn-platzi:hover{
+    background-color: #82ad36;
+}
+
 #header img{
     width: 80px;
 }
